moving ahead with jquery sortables

--- a/app/views/layouts/slideshow.html.erb
+++ b/app/views/layouts/slideshow.html.erb
@@ -10,7 +10,8 @@
 	<div id="header">coming up:</div>
 	<div id="title">"Sometimes you're the windshield, sometimes you're the bug"</div>
 	<div id="subtitle">Cato McQ</div>
-	<div id="footer">two step, don't forget to go quick, quick, slow, slow and to hold the second sow otherwise you will be too early on all your ensuing steps</div>
+	<div id="body">two step, don't forget to go quick, quick, slow, slow and to hold the second sow otherwise you will be too early on all your ensuing steps</div>
+	<div id="footer">see you next month! Thursday, June 2nd</div>
 <%= yield %>
 
 <div id="banner" align="center">
