--- a/app/views/slides/_form.html.erb
+++ b/app/views/slides/_form.html.erb
@@ -44,7 +44,7 @@
 <div class="left right">
   <div><br/><br/><br/></div>
 
-	<input type="submit" value="save" class="bt_login"/>
+	<input id="submit" type="submit" value="save" class="bt_login"/>
 </div>
 
 <% end %>
