--- a/app/views/slides/_form.html.erb
+++ b/app/views/slides/_form.html.erb
@@ -42,6 +42,10 @@
 </div>
 
 <div class="left right">
+  <div>
+    <%= f.label :duration, :class => 'grey' %>
+    <%= f.text_field :duration, :size => 3, :class => 'field' %> seconds
+  </div>
   <div><br/><br/><br/></div>
 
 	<input id="submit" type="submit" value="save" class="bt_login"/>
